<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24">

        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/filters_title"
            android:fontFamily="@font/ibm_plex_sans_medium"
            android:textColor="@color/text_black"
            android:textSize="@dimen/dimen_20_sp" />

    </androidx.appcompat.widget.Toolbar>

    <RadioGroup
        android:id="@+id/sort_by_radio_group"
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/sortByAlphabetBtn"
        android:divider="@drawable/radio_btn_divider"
        android:showDividers="middle"
        android:dividerPadding="@dimen/dimen_16_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <RadioButton
            android:id="@+id/sortByAlphabetBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/filters_sort_by_alphabet"
            style="@style/RadioButton"/>

        <RadioButton
            android:id="@+id/sortByDateBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/filters_sort_by_date"
            style="@style/RadioButton"/>

        <RadioButton
            android:id="@+id/sortByAlphabetDescendingBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/filters_sort_by_alphabet_descending"
            style="@style/RadioButton"/>

        <RadioButton
            android:id="@+id/sortByDateDescendingBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/filters_sort_by_date_descending"
            style="@style/RadioButton"/>
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/applyBtn"
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="wrap_content"
        android:text="@string/filters_apply"
        android:layout_marginStart="@dimen/dimen_9_dp"
        android:layout_marginEnd="@dimen/dimen_9_dp"
        android:layout_marginBottom="@dimen/dimen_20_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Button"/>

</androidx.constraintlayout.widget.ConstraintLayout>